# Metody_numeryczne

./: 0.py  pyproject.toml
Seria_1/: 1.py
Set_1/: 1.py  2.py
Set_10/: 1.py  2.py
Set_11/: 1.py  2.py
Set_12/: 1.py  2.py
Set_13/: 1.py  2.py
Set_2/: 1.py  2.py
Set_3/: 1.py  2.py
Set_4/: 1.py  2.py  t1ex4.py
Set_5/: 1.py  geny.txt  mery.py  najman.txt
Set_6/: 1.py  2.py
Set_7/: 1.py  2.py  3.py  3_1.py  3_2.py  plot3D.py  test.py
Set_8/: test.py
Set_9/: 1.py  2.py
