[tool.poetry]
name = "cmpp"
version = "0.1.0"
description = ""
authors = ["WW18 <wwasil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
pyqtgraph = "~0.13.3"
ipykernel = "^6.25.1"
scipy = "^1.11.2"
matplotlib = "^3.7.2"
sympy = "^1.12"
numpy = "^1.26.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
