[tool.poetry]
name = "cmpp"
version = "0.1.0"
description = ""
authors = ["WW18 <wwasil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
ipykernel = "^6.25.1"
scipy = "^1.11.2"
matplotlib = "^3.7.2"
sympy = "^1.12"
numpy = "^1.26.3"
tqdm = "^4.66.2"
qiskit = "^1.0.2"
pyqtgraph = "^0.13.5"
pyqt6 = "^6.6.1"
pyqt6-datavisualization = "^6.6.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
